<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_analytics"
        android:icon="@drawable/icon_analytics"
        android:title="@string/title_analytics" />

    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/icon_summary"
        android:title="@string/title_summary" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/icon_add"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/icon_add"
        android:title="@string/title_categories" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_balances"-->
    <!--        android:icon="@drawable/icon_balances"-->
    <!--        android:title="@string/title_balances" />-->

    <item
        android:id="@+id/navigation_miscellaneous"
        android:icon="@drawable/icon_miscellaneous"
        android:title="@string/title_miscellaneous" />

</menu>