<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_summary">

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="ru.teambruh.cashguardian.ui.fragments.SummaryFragment"
        android:label="@string/title_analytics"
        tools:layout="@layout/analytics_fragment" />

    <fragment
        android:id="@+id/navigation_summary"
        android:name="ru.teambruh.cashguardian.ui.fragments.SummaryFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/summary_fragment" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="ru.teambruh.cashguardian.ui.fragments.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/transactions_fragment" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="ru.teambruh.cashguardian.ui.fragments.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/categories_fragment" />

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_balances"-->
    <!--        android:name="ru.teambruh.cashguardian.ui.fragments.BalancesFragment"-->
    <!--        android:label="@string/title_balances"-->
    <!--        tools:layout="@layout/balances_fragment" />-->

    <fragment
        android:id="@+id/navigation_miscellaneous"
        android:name="ru.teambruh.cashguardian.ui.fragments.MiscellaneousFragment"
        android:label="@string/title_miscellaneous"
        tools:layout="@layout/balances_fragment" />
</navigation>